--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <h1>Lezioni dove vuoi tu</h1>
+
+
+        </div>
+
+      </div>
+
+    </div>
 
   </body>
 </html>
