--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
       <div class="row">
         <div class="col-lg-12">
           <h1>Lezioni dove vuoi tu</h1>
-
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-6">
+           <img src="img/icon/maps.png" alt="">
+            <h3>A casa tua</h3>
+            Scegli il tuo maestro preferito e prenota la prima lezione a casa tua, a casa del maestro o nel suo studio
+        </div>
+        <div class="col-lg-6">
+          <img src="img/icon/screen.png" alt="">
+          <h3>Online</h3>
+          Impara senza muoverti da casa! Scegli da una vastissima lista di maestri abilitati all'insegnamento online, senza doverti preoccupare di distanze
 
         </div>
 
