--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
 
       </div>
-      <div class="row">
+      <div id="why"class="row">
         <div class="col-lg-12">
           <h1>Perchè Cademi</h1>
           <img src="img/icon/profile.png" alt="">
@@ -62,13 +62,13 @@
           Su Cademi trovi centinaia di Maestri qualificati e competenti in tutta Italia. Scegli quello più adatto a te e contattali senza impegno
         </div>
       </div>
-      <div class="row">
+      <div id="why"class="row">
         <div class="col-lg-12">
           <img src="img/icon/secure.png" alt="">
           <h3>Soddisfazione Garantita</h3>
           Se non sei soddisfatto del tuo maestro, puoi cambiarlo senza costi aggiuntivi. Le lezioni acquistate su Cademi possono essere utilizzate con tutti i nostri maestri e il nostro team è sempre disponibile per darti un consiglio!
         </div>
-        <div class="row">
+        <div id="why"class="row">
           <img src="img/icon/flex.png" alt="">
           <h3>Flessibile e Conveniente</h3>
           Cademi non ha alcun costo d’iscrizione a differenza delle scuole di musica tradizionali. Inoltre, sei tu a scegliere dove fare lezione e gli orari delle tue lezioni.
